<?xml version="1.0"?>
<package format="2">
  <name>ik_constraint2_distance_field</name>
  <version>0.0.0</version>
  <description>The ik_constraint2_distance_field package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>octomap_ros</depend>
  <depend>choreonoid</depend>
  <depend>ik_constraint2</depend>

</package>
