<?xml version="1.0"?>
<package format="2">
  <name>ik_constraint2_region_cdd</name>
  <version>0.0.0</version>
  <description>The ik_constraint2_region_cdd package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cddeigen</depend>
  <depend>choreonoid</depend>
  <depend>ik_constraint2</depend>

</package>
